		loops do to a while loop rather than an if-statement
	REVERSION: FloatVectorIndividual and DoubleVectorIndividual used to adjust the
		Gaussian Mutation standard deviation according to the max - min
		difference on a per-gene basis.  This is no longer done: there is now
		only one standard deviation regardless of gene min/max values.
	Added Polynomial Mutation to FloatVectorIndividual and DoubleVectorIndividual
	Added Simulated Binary Crossover (SBX) to FloatVectorIndividual and
		DoubleVectorIndividual
	Updated copyright information on many parameter files
	Added BBOB
	Added The ECJ Owner's Manual
	Migrated to SVN on Google Code
	Deleted teambots directory
	Removed ParameterDatabaseListener and ParameterDatabaseAdapter
	Got GUI working, sort of, with seeds but it's still flakey with jobs
	Revised code to not use exists(Parameter) anymore, but rather to use
		exists(Parameter, Parameter)
	Fixed bug which was preventing -p from working on the command line, oops
	Added GPData.clone()
	Tweaked manual to discuss GPData.copyTo() and GPData.clone() in more
		detail.  Thanks to Wei He <wei.he.stkm@gmail.com>
	Removed flushing as an option in Output
	Added new initialize method
	Changed Polynomial bounded mutation parameter to bounded-polynomial-version
	Added new option to mutate outside of gene bounds for floating-point
	Made GPData.copyTo() return void
	Added mutation bounding to the various DE Breeders
	Modifications to ecsuite to enable its use in coevolutionary contexts.
	Added CoevolutionaryECSuite.java in coevolve2 to demonstrate the item above.
	Major modifications to GE package, thanks to Houston Mooers
		<hemooers@gmail.com>
	Added GPIndividual.printTrees(...) to help out GE
	Added out of range retries to polynomial mutation.
	Changed the parameter bounded-polynomial-version to alternative-polynomial-version	
		in FloatVectorSpecies
	Changed the variable outOfRangeRetries to outOfBoundsRetries in FloatVectorSpecies